--- a/codeblue/src/main/resources/application.properties
+++ b/codeblue/src/main/resources/application.properties
@@ -4,7 +4,7 @@ debug=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # test DB
-spring.datasource.url=jdbc:mysql://localhost:3306/codeblue?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/crazyoung?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=java1234
 
